qmlcachegen: fix crash on unresolved type with required property

qmlcachegen can't resolve all types when importing QtQuick.Controls, so
scopes from QtQuick.Controls might be unresolved.
Check the scope before creating a fix suggesion when checking the
required properties, and add a test that tests a file with required
properties on an unresolved base type "Tumbler".

This also fixes the crashes from QTBUG-137196 and QTBUG-136998 it seems.

Fixes: QTBUG-137411
Fixes: QTBUG-137196
Fixes: QTBUG-136998
Change-Id: Ibf461b54abf84ba13bff8c4833940c7359cf2d8e
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit c9713681e8d0ee7b7a69d38c5972ee73e8ee4b78)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 7e93137ea174d7ba02751d01fb4eba3d48cc97d9)
(cherry picked from commit 672e6777e8e6a8fd86c7877075e7a8aa0ea0a31a)
(cherry picked from commit 9eb8f761c1817eafea58716c1e7c0f367b94a06c)